<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="35dp">

        <!--Boton lista simple-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_ListaSimple"
            android:text="@string/Btn_ListaSimple"
            />

        <!--Boton lista doblemente ligada-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_ListaDobleLigada"
            android:text="@string/Btn_ListaDobleLigada"
            />

        <!--Boton lista circular-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_ListaCircular"
            android:text="@string/Btn_ListaCircular"
            />

        <!--Boton metodo de ordenamiento-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_MetodosOrdenamiento"
            android:text="@string/Btn_MetodosOrdenamiento"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>