<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="35dp">

        <!--Boton metodo burbuja-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_MetodoBurbuja"
            android:text="@string/Btn_MetodoBurbuja"
            />

        <!--Boton metodo quickshort-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_MetodoQS"
            android:text="@string/Btn_MetodoQS"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Btn_Inicio"
            android:text="@string/Btn_Inicio"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>